--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "t2",
-  "version": "1.0.0",
-  "description": "",
+  "name": "tailwind_starter",
+  "version": "1.1.0",
+  "description": "This is a starter template for tailwindcss.",
   "main": "index.js",
   "scripts": {
     "dev": "vite"
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.1",
-    "tailwindcss": "^2.2.19",
-    "vite": "^2.6.14"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
+    "vite": "^4.1.1"
   }
 }
